--- a/static/css/page.css
+++ b/static/css/page.css
@@ -283,12 +283,13 @@
 
 /* 검색바 search_bar */
 .oneRoomArea .contArea .mapArea .inputArea{position: absolute; left: 15px; top: 20px; padding: 20px; height: 45px; background-color: white; border: 1px solid #dadada; display: flex; z-index: 2;}
-.oneRoomArea .contArea .mapArea .inputArea div{position: relative; height: 100%;}
-.oneRoomArea .contArea .mapArea .inputArea div input{width: 323px; height: 100%; border: 2px solid #ff9900; box-sizing: border-box;}
-.oneRoomArea .contArea .mapArea .inputArea div button{position: absolute; top:12px; right: 11px; width: 19px; height: 19px; background: url('../images/oneroom_search.png') no-repeat center / cover;}
+/*.oneRoomArea .contArea .mapArea .inputArea div{position: relative; height: 100%;}*/
+.oneRoomArea .contArea .mapArea .inputArea div input{width: 170px; } /* height: 100%; border: 2px solid #ff9900; box-sizing: border-box;*/
+.oneRoomArea .contArea .mapArea .inputArea div input[type=search] {width: 322px; }
+/*.oneRoomArea .contArea .mapArea .inputArea div button{position: absolute; top:12px; right: 11px; width: 19px; height: 19px; background: url('../images/oneroom_search.png') no-repeat center / cover;}*/
 .oneRoomArea .contArea .mapArea .inputArea > button{width: 100px; height: 100%; border: 1px solid #d2d2d2; font-size: 18px; color: #888888; display: flex; justify-content: center; align-items: center; margin-left: 20px;}
 .oneRoomArea .contArea .mapArea .inputArea > button:nth-of-type(1)::before{content: ''; width: 21px; height: 17px; background: url('../images/oneroom_filter.png') no-repeat center / cover; margin-right: 17px;}
-/* iframe */
+/* 지도 사이즈 */
 .oneRoomArea .contArea .mapArea .myMap{width: 100%; height: 100%;}
 
 /* 원룸 페이지 리스트 공통 */
