--- a/templates/oneroom/index.html
+++ b/templates/oneroom/index.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
+    <div class="loading_page none" style="height: 100vh; opacity: 0.5; z-index: 4; background-image: url(../../static/images/ai_loading.gif);  background-size: 10%"></div>
+
     <div class="subPage oneRoomPage">
         <section class="oneRoomArea" style="padding: 120px 0 0 0">
             <h2 class="hidden">원룸</h2>
@@ -281,7 +283,10 @@
         const ai_reco_btn = document.querySelector('.ai_reco_btn');
         ai_reco_btn.addEventListener('click', e => {
             e.preventDefault();
-            setTimeout(() => fetchData(), 600);
+            const loading_page = document.querySelector('.loading_page');
+            loading_page.classList.remove('none');
+            setTimeout(() => { loading_page.classList.add('none'); fetchData(); }, 2000)
+            //setTimeout(() => , 600);
             //fetchData();
         })
 
@@ -309,6 +314,11 @@
                     userAi['C'] = personality[i].value;
                 }
             }
+
+            pet.checked = false;
+            car.checked = false;
+            personality.checked = false;
+
             return userAi
         }
 
