--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -10,12 +10,17 @@
                 <div>
                     <!-- main banner -->
                     <div class="mainBanner">
-                        <img src="{% static 'images/main_banner.png' %}" alt="무한한 가능성을 가진 공간 toch">
-                        <a href="#">자세히 보기
-                            <span class="material-icons-outlined">
-                                east
-                            </span>
-                        </a>
+                        <ins class="kakao_ad_area" style="display:none;"
+                             data-ad-unit="DAN-jIxdXyC1mGLxe827"
+                             data-ad-width="320"
+                             data-ad-height="100"></ins>
+                        <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+                        {#                        <img src="{% static 'images/main_banner.png' %}" alt="무한한 가능성을 가진 공간 toch">#}
+                        {#                        <a href="#">자세히 보기#}
+                        {#                            <span class="material-icons-outlined">#}
+                        {#                                east#}
+                        {#                            </span>#}
+                        {#                        </a>#}
                     </div>
 
                     <!-- main board -->
@@ -233,7 +238,12 @@
 
                 <!-- side banner -->
                 <div class="mainSideBanner">
-                    <img src="{% static 'images/main_sideBanner.png' %}" alt="라포르테블랑 서현">
+                    <ins class="kakao_ad_area" style="display:none;"
+                         data-ad-unit="DAN-Jsw0OvUOD4M8SFBF"
+                         data-ad-width="280"
+                         data-ad-height="250"></ins>
+                    <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async>
+                    </script>
                 </div>
 
                 <!-- side board -->
