카카오 애드핏 이슈2 수정

--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -2,6 +2,8 @@
 {% load static %}
 
 {% block content %}
+    <!-- 스크롤 복원 x -->
+    <script>history.scrollRestoration = "manual"</script>
     <div class="mainPage">
         <!-- contents -->
         <div class="contArea width1200">
