--- a/static/css/global.css
+++ b/static/css/global.css
@@ -2,7 +2,7 @@
 /* 컨텐츠 크기 */
 .width1200{width: 1220px; margin: 0 auto;}
 
-.mainPage{padding-top: 130px;}
+.mainPage{padding-top: 10px;}
 .loginPage > [class *="Area"]{padding: 200px 0 70px;}
 .myPage > [class *="Area"]{padding: 200px 0 70px;}
 .oneRoomPage > [class *="Area"]:not(.oneRoomArea){padding: 130px 0 70px;}
@@ -221,7 +221,7 @@ mark > *{color: #ff9900;}
 .point::after{content: ''; width: 5px; height: 5px; background-color: #46ccbb; border-radius: 100%; display: inline-block; vertical-align: text-top; margin-left: 8px;}
 .bold{font-weight: 800; display: flex; align-items: center;}
 
-header{position: fixed; left: 0; top: 0; width: 100%; border-bottom: 1px solid #dadada; background-color: white; z-index: 10;}
+header{position: sticky; left: 0; top: 0; width: 100%; border-bottom: 1px solid #dadada; background-color: white; z-index: 10;}
 header > div{display: flex; justify-content: center; align-items: center;}
 header > div > *:first-child{margin-right: auto;}
 header > div > *:last-child{margin-left: auto;}
