서브페이지 상단 밀림 수정

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -1,4 +1,3 @@
-
 /* 컨텐츠 크기 */
 .width1200{width: 1220px; margin: 0 auto;}
 
@@ -6,8 +5,8 @@
 .loginPage > [class *="Area"]{padding: 200px 0 70px;}
 .myPage > [class *="Area"]{padding: 200px 0 70px;}
 .oneRoomPage > [class *="Area"]:not(.oneRoomArea){padding: 130px 0 70px;}
-.usedTradePage > [class *="Area"]{padding: 160px 0 70px;}
-.communityPage > [class *="Area"]{padding: 130px 0 70px;}
+.usedTradePage > [class *="Area"]{padding: 10px 0 0 0}
+.communityPage > [class *="Area"]{padding: 10px 0 0 0}
 
 .hidden{height: 0.001px; overflow: hidden;}
 
