--- a/static/css/page.css
+++ b/static/css/page.css
@@ -1172,9 +1172,9 @@
 
 /* 원룸 */
 
-.oneRoomArea {
-    padding-top: 121px;
-}
+/*.oneRoomArea {*/
+/*    padding-top: 121px;*/
+/*}*/
 
 .oneRoomArea .contArea {
     min-width: 1400px;
