--- a/templates/oneroom/index.html
+++ b/templates/oneroom/index.html
@@ -3,7 +3,7 @@
     <div class="loading_page none" style="height: 100vh; opacity: 0.5; z-index: 4; background-image: url(../../static/images/ai_loading.gif);  background-size: 10%"></div>
 
     <div class="subPage oneRoomPage">
-        <section class="oneRoomArea" style="padding: 120px 0 0 0">
+        <section class="oneRoomArea">
             <h2 class="hidden">원룸</h2>
             <div class="contArea">
                 <div class="mapArea">
