--- a/templates/oneroom/index.html
+++ b/templates/oneroom/index.html
@@ -364,7 +364,7 @@
 
         // JSON 데이터 받아오는 함수
         function fetchData() {
-            fetch('https://toch.kr/api/oneroom/')
+            fetch('http://toch.kr/api/oneroom/')
                 .then(response => response.json())
                 .then(data => {
                     let userPreference = getUserAI();
