--- a/templates/oneroom/index.html
+++ b/templates/oneroom/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
+    <!-- 원룸 추천 로딩 gif -->
     <div class="loading_page none" style="height: 100vh; opacity: 0.5; z-index: 4; background-image: url(../../static/images/ai_loading.gif);  background-size: 10%"></div>
-
     <div class="subPage oneRoomPage">
         <section class="oneRoomArea">
             <h2 class="hidden">원룸</h2>
@@ -117,9 +117,7 @@
                             </form>
                         </div>
                     </div>
-
-
-
+                    <!-- KaKao Map -->
                     <div class="myMap"></div>
                 </div>
                 <div class="listArea">
@@ -136,12 +134,22 @@
     <script type="text/javascript">
         const container = document.querySelector('.myMap');
         const itemList = document.querySelector('.bottomArea > ul');
+
+        // Map & Marker 설정
+        let imageSrc = '../../static/images/maker.png'; // 마커이미지의 주소입니다
+        let imageSize = new kakao.maps.Size(30, 30); // 마커이미지의 크기입니다
+        let imageOption = {offset: new kakao.maps.Point(10, 30)}; // 마커이미지의 옵션입니다. 마커의 좌표와 일치시킬 이미지 안에서의 좌표를 설정합니다.
+
+        // 지도 중심 좌표 설정
         const MNU_LATITUDE = 34.91124654247272;
         const MNU_LONGITUDE = 126.43614580709644;
 
-        let imageSrc = '../../static/images/maker.png', // 마커이미지의 주소입니다
-            imageSize = new kakao.maps.Size(30, 30), // 마커이미지의 크기입니다
-            imageOption = {offset: new kakao.maps.Point(10, 30)}; // 마커이미지의 옵션입니다. 마커의 좌표와 일치시킬 이미지 안에서의 좌표를 설정합니다.
+        const options = {
+            center: new kakao.maps.LatLng(MNU_LATITUDE, MNU_LONGITUDE),
+            level: 5 // 지도의 레벨(확대, 축소 정도)
+        };
+
+        let map = new kakao.maps.Map(container, options); //지도 생성 및 객체 리턴
 
         // 마커를 표시할 위치와 해당 정보를 담은 배열
         let tmp_list = [];
@@ -188,13 +196,6 @@
             {% endif %}
         }
 
-        const options = {
-            center: new kakao.maps.LatLng(MNU_LATITUDE, MNU_LONGITUDE), // 지도의 중심 좌표
-            level: 5 // 지도의 레벨(확대, 축소 정도)
-        };
-
-        let map = new kakao.maps.Map(container, options); //지도 생성 및 객체 리턴
-
         for (let i = 0, len = positions.length; i < len; i++) {
             let info = {
                 id: positions[i].id,
@@ -211,7 +212,7 @@
             // 마커를 생성하고 지도위에 표시합니다
             addMarker(positions[i].latlng, info);
             // 아이템 모두 표시
-            showAllItems(info);
+            renderRoom(info);
         }
 
         // 마커를 생성하고 지도 위에 표시하고, 마커에 mouseover, mouseout, click 이벤트를 등록하는 함수입니다
@@ -233,28 +234,19 @@
                     itemList.removeChild(itemList.firstChild);
                 }
                 // 클릭한 마커에 해당되는 list 보여주기
-                setListItem(info);
+                renderRoom(info);
             });
             // 마커가 지도 위에 표시되도록 설정합니다
             marker.setMap(map);
         }
 
-        ////////////////////////////////////////////////////////////////////////////// CUSTOM
-
         // 첫 로드시 리스트에 방들을 전부 보여주는 함수
-        function showAllItems(info) {
-            const roomInfo = roomListItem(info);
-
+        function renderRoom(info) {
+            const roomInfo = roomTemplate(info);
             itemList.insertAdjacentHTML('beforeend', roomInfo);
         }
 
-        // 마커 클릭시 리스트에 방들을 보여주는 함수
-        function setListItem(info) {
-            const roomInfo = roomListItem(info);
-            itemList.innerHTML = roomInfo;
-        }
-
-        function roomListItem(info) {
+        function roomTemplate(info) {
             return ` <li>
                  <a onclick="location.href=${info.id}">
                      <div class="imgBox" style="background-image: url(${info.main_img})"></div>
@@ -277,51 +269,6 @@
             `
         }
 
-        //////////////////////////////////////////////////////////////
-        /////////////////////// 추천 알고리즘 코드  //////////////////////
-        //////////////////////////////////////////////////////////////
-        const ai_reco_btn = document.querySelector('.ai_reco_btn');
-        ai_reco_btn.addEventListener('click', e => {
-            e.preventDefault();
-            const loading_page = document.querySelector('.loading_page');
-            loading_page.classList.remove('none');
-            setTimeout(() => { loading_page.classList.add('none'); fetchData(); }, 2000)
-            //setTimeout(() => , 600);
-            //fetchData();
-        })
-
-        function getUserAI() {
-            const pet = document.getElementsByName('pet');
-            const car = document.getElementsByName('car');
-            const personality = document.getElementsByName('personality');
-
-            const userAi = {};
-
-            for(let i=0; i<pet.length; i++) {
-                if (pet[i].checked) {
-                    userAi['A'] = pet[i].value;
-                }
-            }
-
-            for(let i=0; i<pet.length; i++) {
-                if (car[i].checked) {
-                    userAi['B'] = car[i].value;
-                }
-            }
-
-            for(let i=0; i<pet.length; i++) {
-                if (personality[i].checked) {
-                    userAi['C'] = personality[i].value;
-                }
-            }
-
-            pet.checked = false;
-            car.checked = false;
-            personality.checked = false;
-
-            return userAi
-        }
-
         function getCookie(name) {
             var cookieValue = null;
             if (document.cookie && document.cookie !== '') {
@@ -338,8 +285,46 @@
             return cookieValue;
         }
 
+        //////////////////////////////////////////////////////////////
+        /////////////////////// 추천 알고리즘 코드  //////////////////////
+        //////////////////////////////////////////////////////////////
+        const ai_reco_btn = document.querySelector('.ai_reco_btn');
+        ai_reco_btn.addEventListener('click', e => {
+            e.preventDefault();
+            const loading_page = document.querySelector('.loading_page');
+            loading_page.classList.remove('none');
+            setTimeout(() => { loading_page.classList.add('none'); fetchData(); }, 2000)
+        })
 
-         // 산술평균 값 key로 정렬
+        function getUserAI() {
+            const pet = document.getElementsByName('pet');
+            const car = document.getElementsByName('car');
+            const personality = document.getElementsByName('personality');
+
+            const userAi = {};
+            for(let i=0; i<pet.length; i++) {
+                if (pet[i].checked) {
+                    userAi['A'] = pet[i].value;
+                }
+            }
+            for(let i=0; i<pet.length; i++) {
+                if (car[i].checked) {
+                    userAi['B'] = car[i].value;
+                }
+            }
+            for(let i=0; i<pet.length; i++) {
+                if (personality[i].checked) {
+                    userAi['C'] = personality[i].value;
+                }
+            }
+            pet.checked = false;
+            car.checked = false;
+            personality.checked = false;
+
+            return userAi
+        }
+
+         // 산술평균 값 ( key로 정렬 )
         function arithmeticMean(json, ai) {
             let keys = Object.keys(json[0]);
             let arithmeticMean = {}
@@ -347,16 +332,12 @@
             for (let i = 0; i < json.length; i++) {
                 let sum = 0
                 let post = json[i][keys[0]];
-
-
                 for (let k = 1; k < keys.length; k++) {
                     let post_score = json[i][keys[k]];
-                    //console.log('post_ : ' + post_score);
                     sum += post_score * ai[keys[k]]
                 }
                 arithmeticMean[post] = sum
             }
-
             return Object.keys(arithmeticMean).sort((a, b) => {
                 return arithmeticMean[b] - arithmeticMean[a]
             });
@@ -370,14 +351,12 @@
                     let userPreference = getUserAI();
 
                     tmp_list = arithmeticMean(data, userPreference);
-                    console.log(tmp_list);
 
                     map = new kakao.maps.Map(container, options); //지도 생성 및 객체 리턴
                     positions = [];
                     while(itemList.firstChild) {
                         itemList.removeChild(itemList.firstChild);
                     }
-
                     for (let j in tmp_list) {
                         {% if data %}
                             {% for i in data %}
@@ -415,11 +394,12 @@
                         // 마커를 생성하고 지도위에 표시합니다
                         addMarker(positions[i].latlng, info);
                         // 아이템 모두 표시
-                        showAllItems(info);
+                        renderRoom(info);
                     }
                 })
         }
         </script>
+    <!-- 필터 버튼 -->
     <script>
         $(document).ready(function(){
             $('[data-popup]').click(function(e){
@@ -432,7 +412,6 @@
                 popupArea.addClass('active');
                 popupArea.click(function(e){
                     e.stopPropagation();
-
                 })
                 popupArea.find('.closeBtn').click(function(){
                     popupArea.removeClass('active')
